<resources>
    <string name="app_name" translatable="false">DateBook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="join_free">Join Free</string>
    <string name="join_message">Join the DateBook community for free with just a few simple steps And Stand a chance to make money online.</string>
    <string name="verify_phone_number">Verify Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="policy_text">DateBook would wish to verify the existence of your account using your email address. You can also create an account by signing in to your account.</string>
    <string name="proceed">Proceed</string>
    <string name="phone_empty_error">Dear Customer, Phone Number cannot be empty</string>
    <string name="phone_not_valid_error">Dear Customer, Phone Number is not valid</string>
    <string name="credential_auth_error">Dear Customer, There has been an Error. Kindly try again!</string>
    <string name="request_permission_error">Dear Customer, Kindly grant the required permissions to proceed</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_status">This is your Profile Name and shall be Public!</string>
    <string name="status">Hi there, I\'m using DateBook</string>
    <string name="value_true">true</string>
    <string name="select_gender">Select Gender</string>
    <string name="banner_ad_unit_id">ca-app-pub-4452099359708051/6898833732</string>
    <string name="not_gender_selected">Dear Customer, Kindly select one image for your Gender</string>
    <string name="select_dob">Select Date Of Birth</string>
    <string name="agora_app_id">aed5bd8dc4574ff9a1b5f270b1660295</string>
    <!-- Obtain a temp Access Token at https://dashboard.agora.io -->
    <!-- You will need to deploy your own token server for production release -->
    <!-- Leave this value empty if Security keys/Token is not enabled for your project -->
    <string name="agora_access_token">006aed5bd8dc4574ff9a1b5f270b1660295IAC+xqSv31PHlQ5m6KheAKZnptcvDtdn/6fP0ih9bp+AKeho7U4AAAAAEADXbN9KpA7SXgEAAQCkDtJe</string>
    <string name="default_notification_channel_id">dateBook-001</string>

    <string-array name="language_array">
        <item>English</item>
        <item>French</item>
    </string-array>

    <string-array name="last_seen">
        <item>Everyone</item>
        <item>My Matches</item>
        <item>Nobody</item>
    </string-array>

</resources>
