<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CreateAccountThree">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:id="@+id/linearLayoutCreateOne">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="2dp"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:progress="75"
                android:id="@+id/progressBarDob"
                android:progressBackgroundTintMode="src_in"
                android:progressTint="@color/colorDominant"
                android:progressBackgroundTint="@color/colorPrimary"
                tools:targetApi="lollipop" />

        </LinearLayout>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCreateOne"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/app_name"
            android:id="@+id/createAccountThreeBackButton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createAccountThreeBackButton"
            android:id="@+id/textViewDob"
            android:layout_marginTop="50dp"
            android:textColor="@color/colorBlack"
            android:text="@string/select_dob"
            android:textSize="24sp"/>

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:calendarViewShown="false"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewDob"
            android:datePickerMode="spinner"
            tools:targetApi="lollipop" />

        <Button
            android:layout_width="200dp"
            android:layout_height="45dp"
            app:layout_constraintTop_toBottomOf="@+id/datePicker"
            app:layout_constraintEnd_toEndOf="@+id/datePicker"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape_resource"
            android:text="@string/proceed"
            android:textColor="@color/colorWhite"
            android:id="@+id/buttonProceedDob"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>