<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        android:id="@+id/layout_start">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:id="@+id/start_screen_top_constraint">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="50dp"
                android:textColor="#fff"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/join_free"
                android:textStyle="bold"
                android:id="@+id/text_join"/>

            <TextView
                android:id="@+id/text_join_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/join_message"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#fff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_join" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/start_screen_top_constraint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="20dp"
                android:layout_marginBottom="-20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="30dp">

                    <com.github.ybq.android.spinkit.SpinKitView
                        android:id="@+id/progress"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="100dp"
                        android:layout_marginLeft="100dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        style="@style/SpinKitView.Large.Circle"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:SpinKit_Color="@color/colorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="75dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorDarkBlack"
                        android:gravity="center_horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/verify_phone_number"
                        android:id="@+id/login_title"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        app:layout_constraintTop_toBottomOf="@+id/login_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:gravity="center_horizontal"
                        android:id="@+id/layout_number">

                        <com.hbb20.CountryCodePicker
                            android:id="@+id/ccp"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            app:ccp_showNameCode="false"
                            />

                        <EditText
                            android:id="@+id/editText_carrierNumber"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/phone_number"
                            android:inputType="phone"
                            android:singleLine="true" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/layout_number"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:gravity="center_horizontal"
                        android:id="@+id/text_acknowledge"
                        android:layout_marginTop="10dp"
                        android:text="@string/policy_text"/>

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="45dp"
                        app:layout_constraintTop_toBottomOf="@+id/text_acknowledge"
                        app:layout_constraintEnd_toEndOf="@+id/layout_number"
                        android:background="@drawable/button_shape_resource"
                        android:layout_marginTop="25dp"
                        android:text="@string/proceed"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#fff"
                        android:id="@+id/buttonLogin"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>